fix: cinema overlap with img

--- a/src/pages/CinemaPage/FilmIntroduction.css
+++ b/src/pages/CinemaPage/FilmIntroduction.css
@@ -4,6 +4,7 @@
   min-width: 1200px;
   height: 366px;
   background: #483c70 url(../../assets/banner_bg.png) no-repeat 50%;
+  margin-bottom: 40px;
 }
 .banner .wrapper {
   width: 100%;
